# proj_c-_in_dart

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
asset/: SETTINGS.js  app.js  index.html
asset/css/: advanced_map.css  bottombar.css  buttons.css  connection_status_table.css  create_job_popup.css  create_job_using_robot.css  fullscreen_popup.css  input.css  joystick.css  main.css  map.css  popup.css  scrollbar.css  settings_screen.css  slider-styling.css  startup_screen.css  topbar.css  topbar_data.css  user_info.css
asset/css/lib/: animate.css  material-icons.css  other.css
asset/img/file_icons/: readme.txt
asset/js/: drag_feature.js  fastclick.js  index.js  ol_markers.js  ol_svg_icons.js  setup.js
asset/js/classes/: AdvancedEditMap.js  AffineTransform.js  CountedIdSemophor.js  JobsArray.js  Proj4Projection.js  ProjectorClass.js  ProjectorFactory  TotalStation.js  TotalStationLocation.js  TotalStationLocationLayout.js  TotalStationLocationLocalStorage.js  custom_map.js  custom_projection.js  projector.js  template_group.js
asset/js/config/: email_config.js  templateshop_config.js
asset/js/controllers/: JobLoader.js  app_controller.js  audioController.js  blue_controller.js  communication_controller.js  create_job_menu_controller.js  custom_map_controller.js  custom_projection_controller.js  event_controller.js  (+32 more)
asset/wasm/: bs-config.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  web_view_container.dart
lib/proj_bridge/: proj_dart.dart
lib/ui/: home.dart  mapscreen.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+238 files in other folders)
